[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abcgan-drivers"
version = "0.0.1"
authors = [
  { name="Pablo Reyes", email="pablo.reyes@sri.com" },
  { name="Leslie Lamarche", email="leslie.lamarche@sri.com" }
]
description = "ABC driver calculation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

