[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abcgan-drivers"
version = "0.1.0"
authors = [
  { name="Pablo Reyes", email="pablo.reyes@sri.com" },
  { name="Leslie Lamarche", email="leslie.lamarche@sri.com" }
]
description = "ABC driver calculation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "flipchem",
    "apexpy",
    "skyfield",
    "spacepy",
    "pytz"
]

scripts = {abcgan-drivers = "abcdrivers.drivers:main"}

[tool.setuptools.package-data]
"abcdrivers.data_files" = ["*"]
